src/objects/BigMachines__Quote_Product__c.object
<CustomObject>
    <description>An individual line item on an Oracle CPQ Cloud quote</description>
    <fields>
        <fullName>BigMachines__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BigMachines__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BigMachines__Prep_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prep Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Oracle CPQ Cloud Quote Products</relationshipLabel>
        <relationshipName>BigMachines_Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BigMachines__Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>BigMachines_Quote_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BigMachines__Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines__Synchronization_Id__c</fullName>
        <label>Synchronization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Total_Price__c</fullName>
        <formula>BigMachines__Sales_Price__c * BigMachines__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Quote Product</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Quote Products</pluralLabel>
    <recordTypes>
        <fullName>BigMachines__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>